python test working

--- a/src/votingapp/ui/index.css
+++ b/src/votingapp/ui/index.css
@@ -54,7 +54,7 @@ h1 {
      margin: 10px;
      padding: 10px 10px;
      border: 1px solid #00BCD4;
-     background: #00BCD4;
+     background: orange;
      color: #fff;
      font-size: 16px;
      text-decoration: none;
